scripts/sample-scala-app/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scala-app
  labels:
    app: scala-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: scala-app
