scripts/sample-scala-app/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scala-app
  labels:
    app: scala-app
spec:
  to:
    kind: Service
    name: scala-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
